[JBWS-4295]:Add wildfly27dev profile to test against WFLY27 upstream version