@@ -694,6 +694,101 @@
       </build>
     </profile>
     <!--
+    Descr: Test with the latest WFLY27 upstream version
+    -->
+    <profile>
+      <id>wildfly27dev</id>
+      <properties>
+        <additionalGroovyScriptSuffix>-nolegacy</additionalGroovyScriptSuffix>
+        <jboss.remoting.protocol>remote+http</jboss.remoting.protocol>
+        <jboss.initial.context.factory>org.wildfly.naming.client.WildFlyInitialContextFactory</jboss.initial.context.factory>
+        <modular.jdk.args>
+          --add-exports=java.desktop/sun.awt=ALL-UNNAMED
+          --add-opens=java.base/java.io=ALL-UNNAMED
+          --add-opens=java.base/java.lang=ALL-UNNAMED
+          --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
+          --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+          --add-opens=java.base/java.security=ALL-UNNAMED
+          --add-opens=java.base/java.util=ALL-UNNAMED
+          --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
+          --add-opens=java.management/javax.management=ALL-UNNAMED
+          --add-opens=java.naming/javax.naming=ALL-UNNAMED
+        </modular.jdk.args>
+      </properties>
+      <dependencies>
+        <dependency>
+          <groupId>org.wildfly</groupId>
+          <artifactId>wildfly-webservices-tests-integration</artifactId>
+          <version>${wildfly27dev.version}</version>
+          <exclusions>
+            <exclusion>
+              <groupId>org.jboss.sasl</groupId>
+              <artifactId>jboss-sasl</artifactId>
+            </exclusion>
+            <!-- Temporary exclusion to replace with jakarta dependency till the wildfly-webservices-tests-integration is updated -->
+            <exclusion>
+              <groupId>org.jboss</groupId>
+              <artifactId>jboss-ejb-client</artifactId>
+            </exclusion>
+          </exclusions>
+        </dependency>
+        <!-- Temporary replacement with jakarta dependency till the wildfly-webservices-tests-integration is updated -->
+        <dependency>
+          <groupId>org.jboss</groupId>
+          <artifactId>jboss-ejb-client-jakarta</artifactId>
+          <version>4.0.44.Final</version>
+        </dependency>
+        <!-- Arquillian container integration -->
+        <dependency>
+          <groupId>org.wildfly.arquillian</groupId>
+          <artifactId>wildfly-arquillian-container-managed</artifactId>
+          <exclusions>
+            <exclusion>
+              <groupId>org.jboss.sasl</groupId>
+              <artifactId>jboss-sasl</artifactId>
+            </exclusion>
+            <exclusion>
+              <groupId>org.jboss.marshalling</groupId>
+              <artifactId>jboss-marshalling</artifactId>
+            </exclusion>
+          </exclusions>
+        </dependency>
+        <dependency>
+          <groupId>org.jboss.arquillian.protocol</groupId>
+          <artifactId>arquillian-protocol-servlet</artifactId>
+          <version>${arquillian.version}</version>
+          <scope>test</scope>
+        </dependency>
+        <dependency>
+          <groupId>xerces</groupId>
+          <artifactId>xercesImpl</artifactId>
+        </dependency>
+        <dependency>
+          <groupId>jakarta.interceptor</groupId>
+          <artifactId>jakarta.interceptor-api</artifactId>
+          <scope>test</scope>
+        </dependency>
+        <dependency>
+          <groupId>org.jboss.openjdk-orb</groupId>
+          <artifactId>openjdk-orb</artifactId>
+          <scope>test</scope>
+        </dependency>
+      </dependencies>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <excludes combine.children="append">
+                <!-- enable this after https://issues.redhat.com/browse/WFLY-16481 is fixed-->
+                <exclude>**/org/jboss/test/ws/publish/EndpointPublishTestCase**</exclude>
+              </excludes>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <!--
     Name:  secmgr
     Descr: Additional testsuite exclusions when running against a container with security manager enabled 
     -->
